buildscript {
    repositories { gradlePluginPortal() }
    dependencies { classpath 'com.github.johnrengelman:shadow:8.1.1' }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'

    group = 'io.cloudmock'
    version = '0.1.0-SNAPSHOT'

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation platform(libs.junit.bom)
        testImplementation libs.junit.jupiter
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
                artifactId = project.name
            }
        }
    }

    // Service modules may depend on cloudmock-core (the SPI lives there), but no service module
    // may depend on another service module at compile or runtime. Test code is exempt so that
    // integration test modules (e.g. cloudmock-junit6 tests) can combine multiple modules.
    afterEvaluate {
        ['compileClasspath', 'runtimeClasspath'].each { cfgName ->
            configurations.findByName(cfgName)?.allDependencies?.each { dep ->
                if (dep.group == 'io.cloudmock' && dep.name != 'cloudmock-core') {
                    throw new GradleException(
                        "Module isolation violation in '${project.name}': " +
                        "declared dependency on '${dep.group}:${dep.name}' is forbidden. " +
                        "cloudmock-* service modules must not depend on each other."
                    )
                }
            }
        }
    }

    configurations.matching { !it.name.toLowerCase().contains('test') }.all {
        resolutionStrategy.eachDependency { DependencyResolveDetails details ->
            if (details.requested.group == 'io.cloudmock' && details.requested.name != 'cloudmock-core') {
                throw new GradleException(
                    "Module isolation violation in '${project.name}': " +
                    "transitive dependency on '${details.requested.group}:${details.requested.name}' is forbidden. " +
                    "cloudmock-* service modules must not depend on each other."
                )
            }
        }
    }
}